facebook link updated

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 			</section>
 			<footer>
 				<a href="http://twitter.com/MasudMorshed"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="link-logo"></a>
-				<a href="http://Facebook.com/masudmorshed"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="link-logo"></a>
+				<a href="http://Facebook.com/masudmorshed6"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="link-logo"></a>
 				<p>&copy; 2017 Masud Morshed.</p>
 			</footer>
-		</div>		
+		</div>
 	</body>
 </html>
